Fix a small layout bug in the welcome page carousel

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -93,9 +93,6 @@
     #home-page div.carousel.slide {
         margin: 150px auto 0 auto;
     }
-    #home-page div.carousel.slide div.carousel-inner {
-        height: calc(100% - 28px);
-    }
 }
 
 @media screen and (max-width: 425px) {
